-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.7.1
-
-
6520ed0f2 (dev), c561b7197 (6.8), 30bf18111 (6.7)
QMdiSubWindow does not refresh when the Maximize button is hidden after being created.
The subwindow is not redrawn correctly until a click event occurs or you hover over the supposed hidden maximize button and the minimize button.
To reproduce the issue:
- Run the attached example project.
- Click on the QMdiSubWindow or hover over the maximize and minimize buttons.